syntax = "proto3";

package example_service.example.v1;

// Specify the Go package for the generated code.
option go_package = "github.com/Hugo-Villagrana/svelte-go-rpc-envoy-monorepo/protobufs/example_service/example/v1;example";

// The request message containing the user's ID.
message MyMessageRequest { string id = 1; }

message MyMessageResponse {
  string id = 1;
  string content = 2;
}

// The service definition.
service MyService {
  // Sends a greeting
  rpc GetMessage(MyMessageRequest) returns (MyMessageResponse);
}
